tests/error/class_in_class.py
class a:
    class b:
        def hello():
            print 'what'

